@@ -15,22 +15,16 @@ By andelf <andelf@gmail.com>
 已经完成功能
 ------------
 
-* Oauth授权
-* 时间线 API
-* 微博相关 API
-* 帐户相关 API
-* 关系链相关 API
-* 私信相关 API
-* 搜索相关 API
-* 热度，趋势 API
-* 数据更新相关 API
+相关例子请参考 ''example.py''.
+* 授权
+* 所有 API json 请求返回
+
 
 
 Further TODO
 ------------
 
 * fix name confilicts
-* add full api
 * model parser
 * add more examples
 * code clean
